--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>CSS defines the colors, aesthetics, visual layout, and organization.</li>
+          <li>We use CSS to define style rules for specific elements of an HTML page and format them using a wide range of style options.</li>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
@@ -34,7 +35,7 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>Enter your Git notes here</li>
+          <li>navigate to the main branch by entering the following Git command: git checkout main</li>
           <li>git status: checks what branch we are currently on</li>
     <li>git checkout -b branch-name: creates a new branch and switches to it</li>
         </ul>
@@ -43,7 +44,7 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>JavaScript (JS), to handle logic and allow users to interact with a website.</li>
           <li>A variable is a named container that allows us to store data in our code.</li>
           <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
